--- a/launch.json
+++ b/launch.json
@@ -6,7 +6,7 @@
       "request": "launch",
       "name": "Launch Program",
       "skipFiles": ["<node_internals>/**"],
-      "program": "${workspaceFolder}\\w07\\week07readings.js"
+      "program": "${workspaceFolder}\\team1\\team1w09\\main.js"
     }
   ]
 }
